--- a/app/src/main/res/layout/item_list_order_product.xml
+++ b/app/src/main/res/layout/item_list_order_product.xml
@@ -3,64 +3,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:background="@color/powerBuyWhite"
-    android:paddingBottom="16dp"
-    android:paddingTop="16dp"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="8dp"
     android:weightSum="10">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="5.5"
-        android:orientation="horizontal"
-        android:paddingEnd="16dp"
-        android:paddingStart="16dp">
+        android:layout_weight="5"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/product_image_list_order"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:background="@drawable/border_grey"
-            android:padding="6dp"
             android:contentDescription="@string/app_name"
-            tools:src="@drawable/ic_pwb_logo_detail"/>
+            android:padding="8dp"
+            tools:src="@drawable/ic_pwb_logo_detail" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/product_name_list_order"
-            style="@style/descriptionProduct"
+            style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:textSize="16sp"
+            android:textColor="@color/blackText"
             tools:text="@string/app_name" />
 
     </LinearLayout>
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/product_price_list_order"
-        style="@style/descriptionProduct"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:textSize="16sp"
-        tools:text="4,200" />
+        android:layout_weight="2"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/blackText"
+        tools:text="@string/price" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/product_qty_list_order"
-        style="@style/descriptionProduct"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:textSize="16sp"
-        tools:text="1" />
+        android:layout_weight="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"        android:textColor="@color/blackText"
+        tools:text="@string/qty" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/product_total_price_list_order"
-        style="@style/descriptionProduct"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:textSize="16sp"
-        tools:text="4,200" />
+        android:layout_weight="2"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"        android:textColor="@color/blackText"
+        android:textStyle="bold"
+        tools:text="@string/total" />
 </LinearLayout>
