--- a/app/src/main/res/drawable/tab_background_selected.xml
+++ b/app/src/main/res/drawable/tab_background_selected.xml
@@ -9,7 +9,7 @@
             <solid android:color="#fff" />
             <stroke
                 android:width="2dp"
-                android:color="@color/lightgray" />
+                android:color="@color/lightGray" />
         </shape>
     </item>
 </layer-list>
