--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -215,7 +215,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/lightgray"
+        android:background="@color/lightGray"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
@@ -357,7 +357,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:background="@color/lightgray"
+        android:background="@color/lightGray"
         app:layout_constraintTop_toBottomOf="@+id/pagerProductImage"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
