--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -112,7 +112,7 @@
         app:layout_constraintBottom_toTopOf="@+id/layout_category"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/lightgray"/>
+        android:background="@color/lightGray"/>
 
     <RelativeLayout
         android:id="@+id/layout_category"
