--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/lightgray"
+        android:background="@color/lightGray"
         app:layout_constraintTop_toBottomOf="@+id/overviewLayout" />
 
     <android.support.constraint.Group
@@ -86,7 +86,7 @@
         android:id="@+id/line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/lightgray"
+        android:background="@color/lightGray"
         app:layout_constraintTop_toBottomOf="@+id/specLayout" />
 
     <android.support.constraint.Group
