--- a/app/src/main/res/layout/list_item_product_detail_description.xml
+++ b/app/src/main/res/layout/list_item_product_detail_description.xml
@@ -200,7 +200,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="15dp"
-            android:background="@color/lightgray"
+            android:background="@color/lightGray"
             android:padding="5dp" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
