--- a/app/src/main/res/layout/list_item_product_filter_header.xml
+++ b/app/src/main/res/layout/list_item_product_filter_header.xml
@@ -48,7 +48,7 @@
         android:id="@+id/line"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/lightgray"
+        android:background="@color/lightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
