--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -24,6 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:drawableStart="@drawable/ic_overview"
+            android:drawablePadding="8dp"
             android:padding="8dp"
             android:text="@string/product_overview"
             android:textColor="@color/nameProductColor"
@@ -69,6 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:drawableStart="@drawable/ic_specification"
+            android:drawablePadding="8dp"
             android:padding="8dp"
             android:text="@string/product_spec"
             android:textColor="@color/nameProductColor"
