--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -26,7 +26,9 @@
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_overview"
             android:drawablePadding="8dp"
-            android:padding="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
             android:text="@string/product_overview"
             android:textColor="@color/nameProductColor"
             android:textSize="20sp"
@@ -73,7 +75,9 @@
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_specification"
             android:drawablePadding="8dp"
-            android:padding="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
             android:text="@string/product_spec"
             android:textColor="@color/nameProductColor"
             android:textSize="20sp"
