--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -62,8 +62,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
+        android:drawablePadding="4dp"
         android:contentDescription="@string/product_detail"
-        android:drawableStart="@drawable/ic_delete"
+        android:drawableStart="@drawable/ic_trash"
         android:text="@string/shopping_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_name_list_shopping_cart"
